added indicator symbols for sound/muted

--- a/public/main.html
+++ b/public/main.html
@@ -529,6 +529,8 @@
                 </div>
             </div> -->
     </section>
+    <img id="muted" class="hidden" src="/images/speaker-with-cancellation-stroke_1f507_Win8.png" alt="muted">
+    <img id="sound-on" class="hidden" src="/images/speaker-with-three-sound-waves_1f50a_Win8.png" alt="sound-on">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
