updated start menu styles

--- a/public/main.html
+++ b/public/main.html
@@ -20,142 +20,140 @@
   </head>
   <body>
     <section id="start-menu">
-      <header>
-        <div id="select-players">
-          <div class="player grey" id="grey">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+      <div id="select-players">
+        <div class="player grey" id="grey">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player purple" id="purple">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player purple" id="purple">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player blue" id="blue">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player blue" id="blue">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player green" id="green">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player green" id="green">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player yellow" id="yellow">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player yellow" id="yellow">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player orange" id="orange">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player orange" id="orange">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player red" id="red">
-            <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
-            />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player red" id="red">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
           </div>
-          <div class="player pink" id="pink">
+          <div class="player-points hidden"></div>
+        </div>
+        <div class="player pink" id="pink">
+          <img
+          class="crown hidden"
+          src="/images/crown.png"
+          alt="crown"
+          />
+          <div class="player-name">
+            ?
+          </div>
+          <div class="player-points hidden"></div>
+        </div>
+      </div>
+      <div id="start-menu-middle">
+        <div id="start-left">
+          <div id="chosen-language">
             <img
-              class="crown hidden"
-              src="/images/crown.png"
-              alt="crown"
+            class="crown hidden"
+            src="/images/crown.png"
+            alt="crown"
             />
-            <div class="player-name">
-              ?
-            </div>
-            <div class="player-points hidden"></div>
+            <img
+            id="german-flag"
+            src="/images/flag-germany_1f1e9-1f1ea.png"
+            alt="german language icon"
+            />
+            <img
+            id="english-flag"
+            src="/images/flag-united-states_1f1fa-1f1f8.png"
+            alt="english language icon"
+            />
           </div>
         </div>
-        <div id="start-menu-main">
-          <div id="start-left">
-            <div id="chosen-language">
-              <img
-                class="crown hidden"
-                src="/images/crown.png"
-                alt="crown"
-              />
-              <img
-                id="german-flag"
-                src="/images/flag-germany_1f1e9-1f1ea.png"
-                alt="german language icon"
-              />
-              <img
-                id="english-flag"
-                src="/images/flag-united-states_1f1fa-1f1f8.png"
-                alt="english language icon"
-              />
-            </div>
+
+        <div id="logo-button-box">
+          <div class="stuff-logo">
+            <h2>All&nbsp;That</h2>
+            <h1>Stuff</h1>
           </div>
 
-          <div id="logo-button-box">
-            <div class="stuff-logo">
-              <h2>All&nbsp;That</h2>
-              <h1>Stuff</h1>
-            </div>
-
-            <div class="buttonBox hidden">
-              <div>press</div>
-              <button id="play">
-                <img
-                  class="crown"
-                  src="/images/crown.png"
-                  alt="crown"
-                />
-                everybody's in</button>
+          <div class="buttonBox hidden">
+            <div>press</div>
+            <button id="play">
+              <img
+              class="crown"
+              src="/images/crown.png"
+              alt="crown"
+              />
+              everybody's in</button>
               <div>to start the game</div>
-            </div>
-            <div class="waiting-msg hidden">
-              waiting for other players
-            </div>
           </div>
-          <div id="start-right"></div>
+          <div class="waiting-msg hidden">
+              waiting for other players
+          </div>
         </div>
-      </header>
+        <div id="start-right"></div>
+      </div>
 
       <div id="ticker">
         <div id="ticker-objects">
@@ -317,6 +315,7 @@
         </div>
       </div>
     </section>
+
     <section id="main-game" class="hidden">
       <div id="main-left-center">
         <section id="joined-players"></section>
@@ -439,6 +438,7 @@
 
       <div id="queue-overlay"></div>
     </section>
+
     <section id="game-end" class="hidden">
       <div id="players-end">
         <!-- <div class="winner-crown">
@@ -529,6 +529,7 @@
                 </div>
             </div> -->
     </section>
+
     <img id="muted" class="hidden" src="/images/speaker-with-cancellation-stroke_1f507_Win8.png" alt="muted">
     <img id="sound-on" class="hidden" src="/images/speaker-with-three-sound-waves_1f50a_Win8.png" alt="sound-on">
 
